# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  a.out  access_flag.c  access_flags.c  annulation_ls.c  annulation_opt.c  define_type.c  diff_ls  diff_my  f1.txt  f2.txt  ft_ls  ft_ls.c  ft_ls.h  ft_ls_recursion.c  is_dir.c  is_option.c  join_into_a_path.c  lf.c  lf_length_1.c  lf_length_2.c  lf_lst.c  lf_not_dirs.c  lf_print_files.c  link  link2  link_to_dir.c  linkpath.c  long_format.c  long_format_lst.c  long_format_not_dirs.c  ls_count_files.c  ls_dir.c  ls_dir_ext.c  ls_link.c  ls_read_files.c  ls_sort.c  ls_total.c  (+34 more)
ft_ls.dSYM/Contents/Resources/DWARF/: ft_ls
libft/: Makefile  free_words.c  ft_atoi.c  ft_itoa.c  ft_itoa_len.c  ft_lst_push_back.c  ft_lstascii.c  ft_lstdel.c  ft_printf.c  libft.h
libft/ft_printf/: check_flags_modif.c  ft_printf.h  if_color.c  put_binary.c
