cmake_minimum_required(VERSION 3.9)
project(ft_ls)

set(CMAKE_CXX_STANDARD 11)

add_executable(ft_ls
        libft/ft_printf/active_bits.c
        libft/ft_printf/annulation.c
        libft/ft_printf/check_flags_modif.c
        libft/ft_printf/color_off.c
        libft/ft_printf/count_bytes.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/ibs.c
        libft/ft_printf/ibs_uns.c
        libft/ft_printf/if_color.c
        libft/ft_printf/is_flag_mod.c
        libft/ft_printf/is_modificator.c
        libft/ft_printf/is_parse_char.c
        libft/ft_printf/is_type.c
        libft/ft_printf/m_putchar.c
        libft/ft_printf/m_putstr.c
        libft/ft_printf/modificator_dec.c
        libft/ft_printf/modificator_hex.c
        libft/ft_printf/modificator_octal.c
        libft/ft_printf/modificator_uns.c
        libft/ft_printf/prec_diff.c
        libft/ft_printf/put_binary.c
        libft/ft_printf/put_c.c
        libft/ft_printf/put_dec.c
        libft/ft_printf/put_float.c
        libft/ft_printf/put_hex.c
        libft/ft_printf/put_lc.c
        libft/ft_printf/put_ls.c
        libft/ft_printf/put_octal.c
        libft/ft_printf/put_p.c
        libft/ft_printf/put_padding.c
        libft/ft_printf/put_percent.c
        libft/ft_printf/put_s.c
        libft/ft_printf/put_unknown_type.c
        libft/ft_printf/put_unsigned.c
        libft/ft_printf/putstr_ls.c
        libft/ft_printf/set_to_zero.c
        libft/ft_printf/strlen_ls.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lst_push_back.c
        libft/ft_lstadd.c
        libft/ft_lstascii.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_power.c
        libft/ft_printf.c
        libft/ft_putchar.c
        libft/ft_putnbr.c
        libft/ft_putstr.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/libft.h
        annulation_opt.c
        define_type.c
        ft_ls.c
        ft_ls.h
        ft_ls_recursion.c
        is_option.c
        main.c
        parse_arguments.c
        parse_files.c
        parse_options.c
        sort_ascii_bubble.c)
